[package]
name = "eaplanner-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.15", features = ["derive"] }
csv = "1.2.2"
ndarray = "0.15.6"
rand = "0.8.5"
rand_distr = "0.4.3"
serde_json = "1.0.103"
